pxc/tests/test_007_constr/glothr.px
public namespace glothr;
import common -;

struct foo {
  int x;
}

foo f; // error: foo is not threaded
println(f.x);
